[package]
name = "unibo"
version = "0.1.0"
description = "A CLI tool and library for interacting with the Unibo API"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", default-features = false, features = [
    "serde",
    "unstable-locales",
    "clock",
] }
clap = { version = "4.3.0", features = ["derive"] }
comfy-table = "6.1.4"
owo-colors = "3.5.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
time = "0.3.21"
